--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">PaybackTask</string>
     <string name="search_hint">Search...</string>
+    <string name="user">User:</string>
+    <string name="likes">Likes:</string>
+    <string name="comments">Comments:</string>
+    <string name="downloads">Downloads:</string>
+    <string name="tags">Tags:</string>
 </resources>
